@@ -1,4 +1,4 @@
-# $Cambridge: exim/exim-src/src/routers/Makefile,v 1.1 2004/10/07 13:10:02 ph10 Exp $
+# $Cambridge: exim/exim-src/src/routers/Makefile,v 1.2 2005/05/17 09:53:35 ph10 Exp $
 
 # Make file for building a library containing all the available routers and
 # calling it routers.a. This is called from the main make file, after cd'ing
@@ -14,13 +14,15 @@ OBJ = accept.o dnslookup.o ipliteral.o iplookup.o manualroute.o \
       rf_set_ugid.o
 
 routers.a:       $(OBJ)
-		 /bin/rm -f routers.a
-		 $(AR) routers.a $(OBJ)
+		 @/bin/rm -f routers.a
+		 @echo "$(AR) routers.a"
+		 @$(AR) routers.a $(OBJ)
 		 $(RANLIB) $@
-		 /bin/rm -rf ../drtables.o
+		 @/bin/rm -rf ../drtables.o
 
 .SUFFIXES:       .o .c
-.c.o:;           $(CC) -c $(CFLAGS) $(INCLUDE) $*.c
+.c.o:;           @echo "$(CC) $*.c"
+		 $(FE)$(CC) -c $(CFLAGS) $(INCLUDE) $*.c
 
 rf_change_domain.o:      $(HDRS) rf_change_domain.c      rf_functions.h
 rf_expand_data.o:        $(HDRS) rf_expand_data.c        rf_functions.h
